--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
 }
 
 .container {
+  margin: 1.5em;
+}
+
+.inner-container {
+  margin: 0 auto;
+}
+
+.inner-container > div {
   margin: 0 auto;
 }
 
